WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41245
gcc warning fix, add suggested parenthesis
https://bugs.webkit.org/show_bug.cgi?id=41245
Summary
gcc warning fix, add suggested parenthesis
Csaba Osztrogonác
Reported
2010-06-26 01:25:11 PDT
..\..\..\WebCore\rendering\RenderBlock.cpp: In member function 'void WebCore::RenderBlock::paintChildren(WebCore::RenderObject::PaintInfo&, int, int)': ..\..\..\WebCore\rendering\RenderBlock.cpp:2108:184: warning: suggest parentheses around '&&' within '||' ..\..\..\WebCore\rendering\RenderBlock.cpp:2117:182: warning: suggest parentheses around '&&' within '||' ..\..\..\WebCore\rendering\RenderBlock.cpp:2130:181: warning: suggest parentheses around '&&' within '||'
Attachments
Patch
(2.94 KB, patch)
2010-06-26 01:27 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-06-26 01:27:21 PDT
Created
attachment 59825
[details]
Patch
Csaba Osztrogonác
Comment 2
2010-06-28 03:30:35 PDT
Comment on
attachment 59825
[details]
Patch Clearing flags on attachment: 59825 Committed
r61992
: <
http://trac.webkit.org/changeset/61992
>
Csaba Osztrogonác
Comment 3
2010-06-28 03:30:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug