2010-06-28  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Kent Tamura.

        GCC suggest parentheses around && within ||
        https://bugs.webkit.org/show_bug.cgi?id=41245

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paintChildren):


Canonical link: https://commits.webkit.org/52972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61992 268f45cc-cd09-0410-ab3c-d52691b4dbfc